# mem-blocks

./: CMakeLists.txt  CMakeSettings.json  README.md
cmake/: buildType.cmake  compiler.cmake  platform.cmake
src/lib/: CMakeLists.txt
